# simple-duplicate-finder

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
simple_duplicate_finder/: __init__.py  core.py
tests/: test_simple_duplicate_finder.py
